# DVM

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
doc/Rus/: dvm.md  flags.md  opcodes.md
doc/Rus/arch/CAR/: Formats.md  car.md  format-c.md  format-i.md  format-j.md
src/: CMakeLists.txt
src/car/: CMakeLists.txt
src/car/assembler/: opcode_table.h
src/car/src/: CMakeLists.txt  auxiliary.h  car.c
src/car/src/i32/format-c/: format-c.h  lopcodes.h
src/car/src/i32/format-i/: format-i.c  format-i.h
src/car/src/i32/format-j/: format-j.c  format-j.h  lopcodes.h
src/car/src/i32/format-r/: format-r.c  format-r.h  lopcodes.h
src/dvm/: CMakeLists.txt  main.c  memory.c  memory.h
src/libcar/: CMakeLists.txt  auxiliary.h  car.c  interrupts.h
src/libcar-gen/: CMakeLists.txt  car-gen.c
src/libcar/i32/format-c/: format-c.c  format-c.h
src/libcar/i32/format-i/: format-i.c  format-i.h
src/libcar/i32/format-j/: format-j.c  format-j.h
src/libcar/i32/format-r/: format-r.c  format-r.h
src/libcar/i64/format-c/: format-c.c  format-c.h
src/libcar/i64/format-i/: format-i.c  format-i.h
src/libcar/i64/format-j/: format-j.c  format-j.h
src/libcar/i64/format-l/: format-l.c  format-l.h
src/libdvm/: CMakeLists.txt  dvm.c  dvm.h  dvm_p.h  dvmdef.c  dvmdef.h  dvmdef_p.h  vcpu.c  vcpu.h  virtualdragon.c  vmutills.c  vprocess.h
src/libdvm-base/: CMakeLists.txt  dvmbase.c  dvmbase.h  dvmbase_p.h  dvmfileapi.c  dvmfs_p.h  dvmfsapi.c  dvmoptions.c  dvmoptions.h
src/libdvm-base/common/osfs/: osfs.c
src/libdvm-base/common/zipfs/: zipfs.c
src/libdvm-base/os/: dvm_memory.h
src/libdvm-base/os/unix/: dvm_memory.c
src/libdvm-base/os/win32/: dvm_memory.c
src/libdvm-base/utils/: dvmutils.c  dvmutils.h
src/libdvm/car/: README.md  auxiliary.h  car.c  car.h  opcodes.h
src/libdvm/car/i32/format-c/: format-c.c  format-c.h
src/libdvm/car/i32/format-i/: format-i.c  format-i.h
src/libdvm/car/i32/format-j/: format-j.c
src/libdvm/car/i32/format-r/: format-r.c
src/libdvm/car/i32/format-t/: format-t.c
src/libdvm/dvm-32_64/: auxiliary.h  dvm-32_64.c  dvm-32_64.h  opcodes.h
src/libdvm/dvm-32_64/format-i/: encode.h  format-i.c  opcode.h
src/libdvm/dvm-32_64/format-j/: format-j.c  format-j.h
src/libdvm/dvm-32_64/format-m/: format.h
src/libdvm/dvm-32_64/format-r/: format.h
src/libdvm/dvm-32_64/i32/: opcodes.h
src/libdvm/dvm-32_64/i32/format-c/: format-c.c  format-c.h  lopcodes.h  opcode.h
src/libdvm/dvm-32_64/i32/format-i/: encode.h  format-i.c  format-i.h  lopcodes.h  opcode.h
src/libdvm/dvm-32_64/i32/format-j/: encode.h  format-j.c  format-j.h  lopcodes.h  opcode.h
src/libdvm/dvm-32_64/i32/format-m/: format-m.c  format-m.h  format.c  format.h
src/libdvm/dvm-32_64/i32/format-r/: format-r.c  format-r.h  format.h  opcode.h
src/libdvm/dvm-32_64/i32/format-t/: format-t.h
src/libgeff/: CMakeLists.txt  geff.h  libgeff.c
src/public/: datatypes.h  platform.h  virtualdragon.h  vmutills.h
src/public/assembler/: opcode_struct.h
src/public/libcar/: car.h  formats.h  opcodes.h
src/public/libcar-gen/: car-gen.h
src/public/libdvm/: dvm.h  dvm_state.h  dvmclass.h  dvmdef.h  dvmflags.h  dvmid.h  dvmstate.h  flags.h  vcpu.h  vcpuclass.h  virtualdragon.h  vmutills.h
src/public/libdvm-base/: dvmbase.h  dvmfileapi.h  dvmfsapi.h  dvmoptions.h
src/public/libdvm-base/common/osfs/: osfs.h
src/public/libdvm-base/common/zipfs/: zipfs.h
src/public/libgeff/: geff.h
src/runtime/: CMakeLists.txt  dvm.h  dvmdef.h  virtualdragon.c  vmutills.c
test/: VM.dex
